Decrease the right padding to prevent wrapping on medium viewport sizes

--- a/src/components/atoms/footer-main/footer-main.scss
+++ b/src/components/atoms/footer-main/footer-main.scss
@@ -237,6 +237,6 @@
   .social-links__list_item {
     padding: 0;
 
-    @include mixins.padding(24, "right");
+    @include mixins.padding(12, "right");
   }
 }
